[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mclog-parser"
version = "0.1.0"
description = "Parse and analyze Minecraft server log files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["minecraft", "log", "parser", "server", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
]

[project.scripts]
mclog = "mclog_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
